# unsatfit

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
deb_dist/: Readme.md  python3-unsatfit_5.1-1_all.deb
dev/: Makefile  Readme.md  format.sh  mypy.ini  test.py  test.sh  test_model.py  upload.sh
docker/: Dockerfile  Makefile  Readme.md  apache2.conf
docs/: Mater.in  _config.yml  code-hcc.md  code-wrc.md  code.md  excel.md  feedback.md  hcmodel.md  history.md  hydrus.md  index.md  install.md  model.md  pest-conversion.md  pest.md  reference.md  swrcfit.md
docs/_includes/: about.html  contents.html  news.html
docs/_layouts/: default.html
docs/sample/: BVV.py  DBC.py  DVC.py  KBC.py  Makefile  PE.py  Readme.md  VG-Mualem.py  VGM.py  VVP.py  code.md  multi.py  (+7 more)
docs/sample-wrc/: BC.py  BVV.py  DB.py  DBC.py  DK.py  DKC.py  DV.py  DVC.py  FX.py  KB.py  KBC.py  KO.py  PE.py  VB.py  VBC.py  VG.py  VGFS.py  VVP.py  multi.py  tri-VG.py  trimodal.py  unsoda-ch.py  unsoda-dual.py  unsoda-kos.py  unsoda-vgs.py  unsoda.py
pyscript/: test.html
swrcfit/: .htaccess  Readme.md  fig.html  index.py  model-ja.html  model.html  swrc.css  unit.html
unsatfit/: __init__.py  _contour.py  _cost.py  _figure.py  _hydrus.py  _init_bound.py  _init_fig.py  _init_lsq.py  _init_model.py  _model_bc.py  _model_bvv.py  _model_dual_bc.py  _model_dual_ko.py  _model_dual_vg.py  _model_fs.py  _model_fx.py  _model_k_vapor.py  _model_ko.py  _model_kobc.py  _model_modified.py  _model_pe.py  _model_tri_vg.py  _model_vg.py  _model_vgbc.py  _model_vvp.py  _optimize.py  _pore_size.py  _test.py  unsatfit.py
(+21 files in other folders)
