[build-system]
requires = ["setuptools>=67.6.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsatfit"
dynamic = ["version"]
description = "Fit soil water retention and unsaturated hydraulic conductivity functions"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Katsutoshi Seki" }
]
keywords = ["soil"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "configparser"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Natural Language :: English",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["unsatfit", "unsatfit.*"]

[tool.setuptools.dynamic]
version = { attr = "unsatfit.__version__" }
